fixed merge